[project]
name = "boyosupercoolwrapper"
description = "This is a ComfyUI wrapper for Andrew DalPino's SuperCool upscaler version 2 now video upscaler as well, enabling its use directly within ComfyUI's node workflow. No extra dependencies required—just drop in the models and go."
version = "2.0.0"
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/DragonDiffusionbyBoyo/BoyoSupercoolWrapper"

#  Used by Comfy Registry https://registry.comfy.org
[tool.comfy]
PublisherId = "DragonDiffusionbyBoyo"
DisplayName = "BoyoSupercoolWrapper"
Icon = ""
